Handle root denial and repair native binary permissions